data/all_generated_tests/raw_wast_tests/br_table_IncorrectConditionEvaluation_2289.wast
;; 9. **Test Description:** Construct a `br_table` scenario where branching depends on operand types verified through polymorphic stacks. Create context-specific labels and validate branching correctness when operands match polymorphically. The objective is to test stack-polymorphism evaluations.

(assert_invalid
  (module
    (func $stack-polymorphic
      (block (br_table 0 (i32.const 1)) (i32.const 1) (i64.const 1))
    )
  )
  "type mismatch"
)